tests/sksl/errors/MeshVertexWithColorFilter.stage
### Compilation failed:

error: 11: effects are not permitted in mesh vertex shaders
uniform colorFilter myColorFilter;
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
1 error
